<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/tvFromDateTime"  android:text="From: "
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etFromDateTime" android:layout_alignStart="@+id/btnCancel"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="6dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="88dp"
        android:text="To: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etLongitudeStart"
        android:layout_below="@+id/etFromDateTime"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="23dp"
        android:layout_toEndOf="@+id/tvToDateTime"
        android:ems="10"
        android:inputType="date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLatitudeStart"
        android:text="@string/latitude_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLatitudeEnd"
        android:layout_below="@+id/tvToDateTime"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatitudeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etLongitudeEnd"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="130dp"
        android:layout_toEndOf="@+id/tvLatitudeStart"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLatitudeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvKeywords"
        android:layout_marginBottom="243dp"
        android:text="@string/latitude_end"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatitudeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etKeywords"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="223dp"
        android:layout_toEndOf="@+id/tvLatitudeEnd"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLongitudeStart"
        android:text="@string/longitude_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvKeywords"
        android:layout_marginBottom="173dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongitudeStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etKeywords"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="157dp"
        android:layout_toEndOf="@+id/tvLatitudeStart"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLongitudeEnd"
        android:layout_above="@+id/tvKeywords"
        android:text="@string/longitude_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongitudeEnd"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etKeywords"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="91dp"
        android:layout_toEndOf="@+id/tvLongitudeEnd"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCancel"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="155dp"
        android:text="@string/keywords"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_alignStart="@+id/go"
        android:layout_marginStart="-42dp"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel" android:text="Cancel" android:onClick="cancel"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />
    <Button
        android:id="@+id/go"  android:onClick="go" android:text="Go"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="128dp" />

</RelativeLayout>