...
        android:layout_alignBaseline="@+id/btnSnap"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="194dp"
        android:layout_marginEnd="58dp"
        android:onClick="scrollNext"
        android:text="@string/next_string"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSnap"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestamp" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
...
